--- a/meal-prep.html
+++ b/meal-prep.html
@@ -1,191 +1,253 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Budget Meal Prep – KitchenLink</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #f9fafb;
-      color: #1f2a44;
-      line-height: 1.7;
-    }
-
-    header {
-      background: linear-gradient(135deg, #ff6f61 0%, #e63946 100%);
-      color: white;
-      text-align: center;
-      padding: 3rem 1.5rem;
-    }
-
-    h1 {
-      font-size: 2rem;
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-    }
-
-    h2 {
-      font-size: 1.5rem;
-      color: #ff6f61;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-size: 1rem;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-    nav {
-      background: #ffffff;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      padding: 1rem 1.5rem;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-
-    nav .nav-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    nav .logo {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: #ff6f61;
-    }
-
-    nav .links {
-      display: flex;
-      gap: 1.5rem;
-    }
-
-    nav .links a {
-      text-decoration: none;
-      color: #1f2a44;
-      font-size: 1rem;
-      transition: color 0.3s ease;
-    }
-
-    nav .links a:hover,
-    nav .links a.active {
-      color: #ff6f61;
-      font-weight: 600;
-    }
-    
-
-    .hamburger {
-      display: none;
-      font-size: 1.5rem;
-      background: none;
-      border: none;
-      color: #ff6f61;
-      cursor: pointer;
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Budget Meal Prep – KitchenLink</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav role="navigation">
-  <div class="nav-container">
-    <div class="logo" aria-label="KitchenLink Logo">KitchenLink</div>
-    <button class="hamburger" aria-label="Toggle menu">☰</button>
-    <div class="links">
-      <a href="index.html" class="active">Home</a>
-      <a href="index.html#products">Products</a>
-      <div class="dropdown">
-        <a href="meal-prep.html">Meal Plans ▾</a>
-        <div class="dropdown-content">
-          <a href="meal-prep.html">Budget Plan</a>
-        </br>
-          <a href="office-meal-plan.html">Office Plan</a>
+    <nav role="navigation">
+        <div class="nav-container">
+            <div class="logo" aria-label="KitchenLink Logo">KitchenLink</div>
+            <button class="hamburger" aria-label="Toggle menu">☰</button>
+            <div class="links">
+                <a href="index.html">Home</a>
+                <a href="index.html#products">Products</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Meal Plans <i class="fas fa-caret-down"></i></button>
+                    <div class="dropdown-content">
+                        <a href="meal-prep.html">Budget Plan</a>
+                        <a href="office-meal-plan.html">Office Plan</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+    </nav>
+
+    <header>
+        <i class="decoration fork fas fa-utensils"></i>
+        <i class="decoration knife fas fa-utensil-spoon"></i>
+        <h1>Budget Meal Prep – Under ₹150/Day</h1>
+        <p>Plan smart. Save time. Eat better!</p>
+    </header>
+
+    <div class="container">
+        <div class="card">
+            <h2><i class="fas fa-lightbulb"></i> Why Meal Prep?</h2>
+            <p class="intro">
+                Planning your meals helps you save money, reduce food waste, and stay stress-free during busy weeks.
+                This 5-day vegetarian plan is designed for students, professionals, and anyone who wants to eat well without spending too much.
+            </p>
+        </div>
+
+        <div class="card">
+            <h2><i class="fas fa-calendar-alt"></i> 5-Day Budget Meal Plan</h2>
+            <table role="grid">
+                <thead>
+                    <tr>
+                        <th scope="col">Day</th>
+                        <th scope="col">Breakfast</th>
+                        <th scope="col">Lunch</th>
+                        <th scope="col">Dinner</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><strong>Monday</strong></td>
+                        <td class="meal-cell">
+                            <i class="fas fa-coffee"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Poha + Tea</div>
+                                <div class="meal-desc">Light and quick breakfast</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-apple-alt"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Rice + Dal + Veg</div>
+                                <div class="meal-desc">Balanced and affordable</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-moon"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Chapati + Mixed Sabzi</div>
+                                <div class="meal-desc">Simple and filling</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>Tuesday</strong></td>
+                        <td class="meal-cell">
+                            <i class="fas fa-coffee"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Idli + Chutney</div>
+                                <div class="meal-desc">South Indian classic</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-apple-alt"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Veg Pulao + Raita</div>
+                                <div class="meal-desc">Flavorful one-pot meal</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-moon"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Chapati + Paneer Bhurji</div>
+                                <div class="meal-desc">Protein-rich dinner</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>Wednesday</strong></td>
+                        <td class="meal-cell">
+                            <i class="fas fa-coffee"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Upma + Filter Coffee</div>
+                                <div class="meal-desc">Quick and comforting</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-apple-alt"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Khichdi + Pickle</div>
+                                <div class="meal-desc">Light and wholesome</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-moon"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Rice + Rajma</div>
+                                <div class="meal-desc">Hearty and nutritious</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>Thursday</strong></td>
+                        <td class="meal-cell">
+                            <i class="fas fa-coffee"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Bread + Peanut Butter</div>
+                                <div class="meal-desc">Quick and energy-packed</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-apple-alt"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Veg Sandwich + Juice</div>
+                                <div class="meal-desc">Fresh and portable</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-moon"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Chapati + Aloo Curry</div>
+                                <div class="meal-desc">Budget-friendly comfort food</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>Friday</strong></td>
+                        <td class="meal-cell">
+                            <i class="fas fa-coffee"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Oats + Banana</div>
+                                <div class="meal-desc">Healthy and filling</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-apple-alt"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Lemon Rice + Curd</div>
+                                <div class="meal-desc">Tangy and refreshing</div>
+                            </div>
+                        </td>
+                        <td class="meal-cell">
+                            <i class="fas fa-moon"></i>
+                            <div class="meal-content">
+                                <div class="meal-title">Roti + Chana Masala</div>
+                                <div class="meal-desc">Protein-packed dinner</div>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
-</nav>
 
-  <header role="banner">
-    <h1>Budget Meal Prep – Under ₹150/Day</h1>
-    <p>Plan smart. Save time. Eat better!</p>
-  </header>
+    <footer role="contentinfo">
+        <div class="footer-content">
+            <div class="footer-column">
+                <h3>KitchenLink</h3>
+                <p>Your partner for healthy, efficient meal planning that fits your busy lifestyle.</p>
+                <div class="social-links">
+                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" aria-label="Pinterest"><i class="fab fa-pinterest-p"></i></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3>Meal Plans</h3>
+                <ul class="footer-links">
+                    <li><a href="office-meal-plan.html"><i class="fas fa-chevron-right"></i> Office Meal Plans</a></li>
+                    <li><a href="meal-prep.html"><i class="fas fa-chevron-right"></i> Budget Plans</a></li>
+                    <li><a href="#"><i class="fas fa-chevron-right"></i> Vegetarian Plans</a></li>
+                    <li><a href="#"><i class="fas fa-chevron-right"></i> High-Protein Plans</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Resources</h3>
+                <ul class="footer-links">
+                    <li><a href="#"><i class="fas fa-chevron-right"></i> Meal Prep Guides</a></li>
+                    <li><a href="#"><i class="fas fa-chevron-right"></i> Recipe Collections</a></li>
+                    <li><a href="#"><i class="fas fa-chevron-right"></i> Grocery Shopping Tips</a></li>
+                    <li><a href="#"><i class="fas fa-chevron-right"></i> Healthy Eating Blog</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Contact Us</h3>
+                <ul class="footer-links">
+                    <li><a href="#"><i class="fas fa-envelope"></i> hello@kitchenlink.com</a></li>
+                    <li><a href="#"><i class="fas fa-phone"></i> +91 98765 43210</a></li>
+                    <li><a href="#"><i class="fas fa-map-marker-alt"></i> Mumbai, India</a></li>
+                    <li><a href="#"><i class="fas fa-clock"></i> Mon-Fri: 9AM-6PM</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            © 2025 KitchenLink | Eat Well. Live Smart.
+        </div>
+    </footer>
 
-  <main class="container" role="main">
-    <section>
-      <h2>💡 Why Meal Prep?</h2>
-      <p>
-        Planning your meals helps you save money, reduce food waste, and stay stress-free during busy weeks.
-        This 5-day vegetarian plan is designed for students, professionals, and anyone who wants to eat well without spending too much.
-      </p>
-    </section>
+    <script>
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.links');
+        const dropdown = document.querySelector('.dropdown');
+        const dropdownContent = document.querySelector('.dropdown-content');
 
-    <section>
-      <h2>🍱 5-Day Budget Meal Plan</h2>
-      <table role="grid">
-        <thead>
-          <tr>
-            <th scope="col">Day</th>
-            <th scope="col">Breakfast</th>
-            <th scope="col">Lunch</th>
-            <th scope="col">Dinner</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Monday</td>
-            <td>Poha + Tea</td>
-            <td>Rice + Dal + Veg</td>
-            <td>Chapati + Mixed Sabzi</td>
-          </tr>
-          <tr>
-            <td>Tuesday</td>
-            <td>Idli + Chutney</td>
-            <td>Veg Pulao + Raita</td>
-            <td>Chapati + Paneer Bhurji</td>
-          </tr>
-          <tr>
-            <td>Wednesday</td>
-            <td>Upma + Filter Coffee</td>
-            <td>Khichdi + Pickle</td>
-            <td>Rice + Rajma</td>
-          </tr>
-          <tr>
-            <td>Thursday</td>
-            <td>Bread + Peanut Butter</td>
-            <td>Veg Sandwich + Juice</td>
-            <td>Chapati + Aloo Curry</td>
-          </tr>
-          <tr>
-            <td>Friday</td>
-            <td>Oats + Banana</td>
-            <td>Lemon Rice + Curd</td>
-            <td>Roti + Chana Masala</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-  </main>
+        // Hamburger menu toggle
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+            hamburger.textContent = navLinks.classList.contains('active') ? '✕' : '☰';
+        });
 
-  <footer role="contentinfo">
-    © 2025 KitchenLink | Smart Content for Smart Homes
-  </footer>
+        // Dropdown toggle on click
+        dropdown.querySelector('.dropbtn').addEventListener('click', (e) => {
+            e.preventDefault();
+            dropdownContent.classList.toggle('show');
+        });
 
-  <script>
-    const hamburger = document.querySelector('.hamburger');
-    const navLinks = document.querySelector('.links');
-
-    hamburger.addEventListener('click', () => {
-      navLinks.classList.toggle('active');
-      hamburger.textContent = navLinks.classList.contains('active') ? '✕' : '☰';
-    });
-  </script>
+        // Close dropdown when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!dropdown.contains(e.target)) {
+                dropdownContent.classList.remove('show');
+            }
+        });
+    </script>
 </body>
 </html>
